--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -309,6 +309,9 @@ on boot
 # Set this property so surfaceflinger is not started by system_init
     setprop system_init.startsurfaceflinger 0
 
+# Run sysinit
+    exec /system/bin/sysinit   
+
     class_start core
     class_start main
 
@@ -488,3 +491,15 @@ service mdnsd /system/bin/mdnsd
     socket mdnsd stream 0660 mdnsr inet
     disabled
     oneshot
+
+# Execute files in /etc/init.d before booting
+    service sysinit /system/xbin/busybox run-parts /system/etc/init.d
+    oneshot
+
+# adb over network
+on property:service.adb.tcp.port=5555
+    stop adbd
+    start adbd
+on property:service.adb.tcp.port=-1
+    stop adbd
+    start adbd
